K8S/erpnext/ingress/erpnext-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpnext
  namespace: erpnext-gitops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - erp-dev.shopvelmoria.store
      secretName: erpnext-production-tls

  rules:
    - host: erp-dev.shopvelmoria.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
